﻿28/12/2020: proportional circles in QPmaps
18/12/2020: openbooks rc and .exe
08/12/2020: openbooks first version
10/04/2020: change case rc
09/04/2020: change case first version
24/03/2020: month heatmap with year distribution
04/03/2020: add month heatmap
20/02/2020: hmtl characters in cleaner
18/02/2020: phi character in cleaner
12/02/2020: small error correction in Europresse
03/02/2020: Accent problem with utf-8 correction
24/01/2020: Project window resize for low resolution
13/12/2019: word replace, newton
11/12/2019: cited years
10/12/2019: Lexis
06/12/2019: Scopus et Factiva
22/11/2019: QP Atlas
18/11/2019: add special character in cleaning
21/10/2019: new senat group
10/09/2019: clean more html tags
09/09/2019: supports.publi writer encoding
09/05/2019: Word replacement history
07/05/2019: Word replacement first attempt
06/05/2019: Unknown supports edition for Europresse
03/05/2019: Filter in folders
02/05/2019: html extensions for Europresse, prc encoding an no empty theme in Filter
19/04/2019: First test version